...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon_mod"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/splash_fragment_sign_in"
            app:layout_constraintVertical_bias=".25"
            />
        <com.google.android.material.button.MaterialButton
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Theme.MollerT.ExpandedYellowButton"
            app:layout_constraintBottom_toTopOf="@id/splash_fragment_sign_up"
            android:layout_marginBottom="@dimen/dimen_8"
            android:textColor="#20292F"
            android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_SIGN_IN_CLICKED)}"
            android:id="@+id/splash_fragment_sign_in"
            />
        <com.google.android.material.button.MaterialButton
...
