...
                style="@style/Theme.MollerT.CommonToolBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/register_fragment_back_button"
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_BACK_CLICKED)}"
                    android:src="@drawable/ic_baseline_chevron_left_24" />

...
                    android:layout_height="wrap_content"
                    android:text="@string/already_account"
                    android:textColor="@color/lightDarkBlue"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/register_fragment_sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_12"
                    android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_LOGIN_CLICKED)}"
                    android:text="@string/sign_in"
                    android:textColor="@color/lightDarkBlue"
...
