...
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_fragment_sign_in"
            style="@style/Theme.MollerT.ExpandedYellowButton"
            android:layout_marginBottom="@dimen/dimen_15"
            android:onClick="@{()-> viewModel.dispatchClickEvent(viewModel.EVENT_SEND_PASSWORD_CLICKED)}"
            android:text="@string/send_password_to_email"
            app:layout_constraintBottom_toTopOf="@id/forgot_password_fragment_forgot_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_fragment_forgot_account"
            android:layout_width="wrap_content"
...
