...
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/home_fragment_search_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_8"
            app:boxCornerRadiusBottomEnd="8dp"
...
