...
            app:enterAnim="@anim/fade_in_slow"
            app:exitAnim="@anim/slide_up_from_bottom"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/fade_in_slow"
            app:exitAnim="@anim/slide_up_from_bottom"
            app:popEnterAnim="@anim/slide_down_from_top"
            app:popExitAnim="@anim/fade_out_fast" />
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
...
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/cardDetailFragment"
        android:name="com.tnh.mollert.cardDetail.CardDetailFragment"
        android:label="CardDetailFragment" >
        <argument
            android:name="workspaceId"
            app:argType="string" />
        <argument
...
