...
        android:clickable="true"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/vd_close_circle"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/two_action_toolbar_end_icon"
        android:layout_width="@dimen/dimen_24"
        android:layout_height="@dimen/dimen_24"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:focusable="true"
...
