...
            android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:itemCount="12"
            app:layout_constraintTop_toBottomOf="@id/label_picker_toolbar"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/label_picker_new_label"
            tools:listitem="@layout/label_item"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/label_picker_new_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
