...
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/add_label_toolbar"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_label_toolbar"
            android:drawableStart="@drawable/vd_tag"
...
